--- a/PocketJW/app/src/main/res/layout/activity_login.xml
+++ b/PocketJW/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,9 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.jw.iii.pocketjw.LoginActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
+    <TextView android:text="@string/hello_world"
+        android:id="@+id/test"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
 </RelativeLayout>
