--- a/PocketJW/app/src/main/res/layout/activity_welcome.xml
+++ b/PocketJW/app/src/main/res/layout/activity_welcome.xml
@@ -1,8 +1,16 @@
 <LinearLayout
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        android:src="@drawable/welcome"/>
+
+    <WebView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/webView" />
 </LinearLayout>
