--- a/PocketJW/app/src/main/res/layout/activity_login.xml
+++ b/PocketJW/app/src/main/res/layout/activity_login.xml
@@ -15,17 +15,17 @@
         android:layout_height="144dip" />
 
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_height="wrap_content"
-        android:layout_width="match_parent">
+        android:layout_width="match_parent"
+        android:layout_marginTop="32dp"
+        android:orientation="vertical">
         <LinearLayout
             android:id="@+id/loginLayout"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:layout_marginTop="32dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:layout_marginBottom="32dp"
             android:orientation="vertical">
             <EditText
                 android:id="@+id/username"
@@ -54,6 +54,16 @@
                 android:layout_marginTop="4dp"/>
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/loginMsg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="32dp"
+            android:textColor="@android:color/white"/>
+
         <Button
             android:id="@+id/login"
             android:layout_height="60dp"
@@ -67,8 +77,7 @@
             android:textSize="20sp"
             android:text="@string/login"
             android:background="@android:color/white"
-            android:layout_below="@id/loginLayout"
             android:textColor="#ED7A63"/>
-    </RelativeLayout>
+    </LinearLayout>
 
 </LinearLayout>
