--- a/PocketJW/app/src/main/res/layout/activity_login.xml
+++ b/PocketJW/app/src/main/res/layout/activity_login.xml
@@ -6,19 +6,19 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.jw.iii.pocketjw.Activity.LoginActivity"
     android:background="#ED7A63"
-    android:gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:gravity="center">
 
     <com.jw.iii.pocketjw.UI.CircularImage
         android:id="@+id/default_avatar"
-        android:layout_width="144dip"
-        android:layout_height="144dip" />
+        android:layout_width="96dip"
+        android:layout_height="96dip" />
 
 
     <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:orientation="vertical">
         <LinearLayout
             android:id="@+id/loginLayout"
@@ -30,7 +30,7 @@
             android:orientation="vertical">
             <EditText
                 android:id="@+id/username"
-                android:layout_height="60dp"
+                android:layout_height="48dp"
                 android:layout_width="match_parent"
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp"
@@ -43,7 +43,7 @@
 
             <EditText
                 android:id="@+id/password"
-                android:layout_height="60dp"
+                android:layout_height="48dp"
                 android:layout_width="match_parent"
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp"
@@ -57,7 +57,7 @@
 
         <Button
             android:id="@+id/login"
-            android:layout_height="60dp"
+            android:layout_height="48dp"
             android:layout_width="match_parent"
             android:layout_marginTop="16dp"
             android:layout_marginLeft="16dp"
@@ -72,4 +72,14 @@
             android:textColor="#ED7A63"/>
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/loginNews"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/loginNews"
+        android:layout_gravity="center"
+        android:layout_marginTop="64dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:textColor="#773D32"/>
 </LinearLayout>
