--- a/PocketJW/app/src/main/res/values/color.xml
+++ b/PocketJW/app/src/main/res/values/color.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="white">#FFF</color>
-    <color name="main">#ED7A63</color>
-    <color name="main_dark">#773D32</color>
+    <color name="colorPrimary">#ED7A63</color>
+    <color name="colorPrimaryDark">#773D32</color>
 </resources>
