--- a/PocketJW/app/src/main/res/values/styles.xml
+++ b/PocketJW/app/src/main/res/values/styles.xml
@@ -6,8 +6,15 @@
     <style name="iiiActionStyle.Base" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
-        <item name="android:textColorPrimary">@color/white</item>
-        <item name="android:colorPrimaryDark">@color/main_dark</item>
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:colorPrimaryDark">@color/colorPrimaryDark</item>
+
+        <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
+    </style>
+
+    <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
+        <item name="spinBars">true</item>
+        <item name="color">@android:color/white</item>
     </style>
 
 </resources>
