--- a/PocketJW/app/src/main/res/values/styles.xml
+++ b/PocketJW/app/src/main/res/values/styles.xml
@@ -3,18 +3,9 @@
     <!-- Base application theme. -->
     <style name="iiiActionStyle" parent="iiiActionStyle.Base" />
 
-    <style name="iiiActionStyle.Base" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="iiiActionStyle.Base" parent="android:Theme.Holo.Light.NoActionBar.TranslucentDecor">
         <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
-        <item name="android:textColorPrimary">@android:color/white</item>
-        <item name="android:colorPrimaryDark">@color/colorPrimaryDark</item>
-
-        <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
-    </style>
-
-    <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
-        <item name="spinBars">true</item>
-        <item name="color">@android:color/white</item>
     </style>
 
 </resources>
