--- a/PocketJW/app/src/main/res/values/styles.xml
+++ b/PocketJW/app/src/main/res/values/styles.xml
@@ -3,7 +3,8 @@
     <!-- Base application theme. -->
     <style name="iiiActionStyle" parent="iiiActionStyle.Base" />
 
-    <style name="iiiActionStyle.Base" parent="android:Theme.Holo.Light.NoActionBar.TranslucentDecor">
+    <style name="iiiActionStyle.Base" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:actionBarDivider">@null</item>
         <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
     </style>
