--- a/PocketJW/app/src/main/res/layout/fragment_news.xml
+++ b/PocketJW/app/src/main/res/layout/fragment_news.xml
@@ -5,4 +5,9 @@
     android:layout_height="fill_parent"
     android:orientation="vertical">
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    </LinearLayout>
