--- a/PocketJW/app/src/main/res/layout/activity_main.xml
+++ b/PocketJW/app/src/main/res/layout/activity_main.xml
@@ -3,23 +3,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+    <FrameLayout
+        android:id="@+id/tabContent"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorPrimary"
-        android:fitsSystemWindows="true"/>
+        android:layout_height="match_parent"
+        android:layout_weight="1">
 
-    <com.jw.iii.pocketjw.UI.SlidingTabLayout
-        android:id="@+id/slidingTabLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewPager"
-        android:layout_width="match_parent"
-        android:layout_height="0px"
-        android:layout_weight="1"
-        android:background="@android:color/white" />
+
+    </FrameLayout>
 
 </LinearLayout>
