--- a/PocketJW/app/src/main/res/drawable/news_tab_selector.xml
+++ b/PocketJW/app/src/main/res/drawable/news_tab_selector.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/newsHover" android:state_pressed="true" />
-    <item android:drawable="@drawable/newsHover" android:state_checked="true" />
-    <item android:drawable="@drawable/newsNormal" />
+    <item android:drawable="@drawable/news_hover" android:state_pressed="true" />
+    <item android:drawable="@drawable/news_hover" android:state_checked="true" />
+    <item android:drawable="@drawable/news_normal" />
 </selector>
