--- a/PocketJW/app/src/main/res/values/styles.xml
+++ b/PocketJW/app/src/main/res/values/styles.xml
@@ -9,4 +9,16 @@
         <item name="android:windowNoTitle">true</item>
     </style>
 
+    <style name="tabStyle">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:paddingTop">8dip</item>
+        <item name="android:paddingBottom">4dip</item>
+        <item name="android:textColor">@drawable/text_color_tab_selector</item>
+        <item name="android:button">@null</item>
+    </style>
+
 </resources>
