--- a/PocketJW/app/src/main/res/layout/activity_main.xml
+++ b/PocketJW/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     <FrameLayout
         android:id="@+id/tabContent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="1" />
 
     <RadioGroup
