--- a/PocketJW/app/src/main/res/layout/fragment_news.xml
+++ b/PocketJW/app/src/main/res/layout/fragment_news.xml
@@ -1,9 +1,23 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context="com.jw.iii.pocketjw.Fragment.NewsFragment">
+    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="news" />
+        <com.jw.iii.pocketjw.UI.SlidingTabLayout
+            android:id="@+id/newsSliding"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/newsContent"
+            android:layout_width="match_parent"
+            android:layout_height="0px"
+            android:layout_weight="1"
+            android:background="@android:color/white" />
+    </LinearLayout>
 
 </FrameLayout>
