--- a/PocketJW/app/src/main/res/layout/activity_contact_item.xml
+++ b/PocketJW/app/src/main/res/layout/activity_contact_item.xml
@@ -4,30 +4,51 @@
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:id="@+id/nameTextView"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/input_padding"
-        android:layout_margin="@dimen/input_margin"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/phoneTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/input_padding"
-        android:layout_margin="@dimen/input_margin"
-        android:textColor="@android:color/holo_blue_light" />
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/emailTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/input_padding"
-        android:layout_margin="@dimen/input_margin"
-        android:textColor="@android:color/holo_blue_light" />
+                <TextView
+                    android:id="@+id/nameTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/input_padding"
+                    android:layout_margin="@dimen/input_margin"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/phoneTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/input_padding"
+                    android:layout_margin="@dimen/input_margin"
+                    android:textColor="@android:color/holo_blue_light" />
+
+                <TextView
+                    android:id="@+id/emailTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/input_padding"
+                    android:layout_margin="@dimen/input_margin"
+                    android:textColor="@android:color/holo_blue_light" />
+
+            </LinearLayout>
+
+        <ImageView
+            android:id="@+id/imgImageView"
+            android:layout_width="132dp"
+            android:layout_height="132dp"
+            android:layout_margin="8dp" />
+
+        </LinearLayout>
 
     <Button
         android:id="@+id/exportButton"
