--- a/PocketJW/app/src/main/res/menu/menu_news_item.xml
+++ b/PocketJW/app/src/main/res/menu/menu_news_item.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.jw.iii.pocketjw.Activity.NewsItemActivity">
+    tools:context="com.jw.iii.pocketjw.Activity.News.NewsItemActivity">
 
     <item
         android:id="@+id/action_share"
