--- a/PocketJW/app/src/main/res/layout/fragment_problems.xml
+++ b/PocketJW/app/src/main/res/layout/fragment_problems.xml
@@ -3,9 +3,9 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/problems"/>
+    <com.handmark.pulltorefresh.library.PullToRefreshListView
+        android:id="@+id/problemsListView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
