--- a/PocketJW/app/src/main/res/layout/listviewitem_comment.xml
+++ b/PocketJW/app/src/main/res/layout/listviewitem_comment.xml
@@ -14,15 +14,7 @@
         android:layout_gravity="center_vertical">
 
         <TextView
-            android:id="@+id/titleTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:textStyle="bold"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/descTextView"
+            android:id="@+id/commentTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@android:color/darker_gray"
